Added rand_sub_selection.py script for running class-incremental learning experiments with random sunset selection.

--- a/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
+++ b/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
@@ -10,8 +10,10 @@ base_flash_addr = 0x00201000
 num_per_line = 28
 
 # Random seed
-random_seed = 42
+random_seed = 41
 
 [paths]
 # Directory paths
 log_dir_path = log/
+results_dir_path = results/
+plots_dir_path = plots/
