Improved logging for request and response messages.

--- a/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
+++ b/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
@@ -12,6 +12,9 @@ num_per_line = 28
 # Random seed
 random_seed = 41
 
+# Debug flag
+debug = True
+
 [paths]
 # Directory paths
 log_dir_path = log/
