Added kNN classifier class that relies on Numpy, updated tests and performance evaluation at rand_sub_selection.py.

--- a/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
+++ b/EPII_CM55M_APP_S/app/scenario_app/incr_learn/config/config.ini
@@ -1,6 +1,6 @@
 [settings]
 # Serial port settings
-port = /dev/cu.usbmodem578D0263771
+port = /dev/cu.usbmodem58C60539331
 baudrate = 921600
 
 bytes_per_img = 785
@@ -19,4 +19,5 @@ debug = False
 # Directory paths
 log_dir_path = log/
 results_dir_path = results/
+artifacts_dir_path = artifacts/
 plots_dir_path = plots/
